--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -125,3 +125,24 @@ html(lang="ru")
 											use(href="./img/spriteSvg.svg#svg-add")
 									
 									.news-counter 6 / 563
+
+						li
+							.team-slide.foto-card
+								.foto-card__text.fl-column
+									.txt-semi Цаллагов Александр Сосланович
+									p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
+
+									.body-6 Команда региона
+								
+								.foto-card__pic
+									img(src="../img/team.webp", width="339" height="448" alt="foto")
+							pre.
+								.team-slide.foto-card
+									.foto-card__text.fl-column
+										.txt-semi Цаллагов Александр Сосланович
+										p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
+
+										.body-6 Команда региона
+									
+									.foto-card__pic
+										img(src="./img/team.webp", width="339" height="448" alt="foto")
