--- a/src/pug/sections/_team.pug
+++ b/src/pug/sections/_team.pug
@@ -13,31 +13,31 @@ article.team
 			#team-counter
 			.team-slider.owl-carousel
 				
-				.team-slide
-					.team-slide__text.fl-column
+				.team-slide.foto-card
+					.foto-card__text.fl-column
 						.txt-semi Цаллагов Александр Сосланович
 						p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
 
 						.body-6 Команда региона
 					
-					.team-slide__foto
+					.foto-card__pic
 						img(src="./img/team.webp", width="339" height="448" alt="foto")
 
-				.team-slide
-					.team-slide__text.fl-column
+				.team-slide.foto-card
+					.foto-card__text.fl-column
+						.txt-semi Бизиков Батраз Энверович
+						p Первый заместитель Министра строительства и архитектуры РСО-Алания
+
+						.body-6 Команда региона
+					
+					.foto-card__pic
+						img(src="https://i.postimg.cc/43Tv1zSx/image.png", width="339" height="448" alt="foto")
+				.team-slide.foto-card
+					.foto-card__text.fl-column
 						.txt-semi Цаллагов Александр Сосланович
 						p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
 
 						.body-6 Команда региона
 					
-					.team-slide__foto
-						img(src="./img/team.webp", width="339" height="448" alt="foto")
-				.team-slide
-					.team-slide__text.fl-column
-						.txt-semi Цаллагов Александр Сосланович
-						p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
-
-						.body-6 Команда региона
-					
-					.team-slide__foto
+					.foto-card__pic
 						img(src="./img/team.webp", width="339" height="448" alt="foto")
