--- a/src/scss/blocks/_project-card.scss
+++ b/src/scss/blocks/_project-card.scss
@@ -35,6 +35,8 @@
 			height: 28px;
 			display: inline-flex;
 			justify-content: flex-end;
+			display: flex;
+			align-items: center;
 			&:hover{
 				svg{fill:$ac1;}
 			}
