--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,8 +28,12 @@
 @import "sections/_support.scss";
 @import "sections/_capital.scss";
 @import "sections/_supervisory.scss";
-
-
+@import "sections/_custom-tabs.scss";
+@import "sections/_success-history.scss";
+// @import "sections/.scss";
+// @import "sections/.scss";
+// @import "sections/.scss";
+// @import "sections/.scss";
 @import "pages/_news.scss/";
 @import "pages/_content-page.scss/";
 
