--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -11,7 +11,12 @@ block content
 				
 			a(href="news.html")
 				span Новости и события
+			
 			a(href="content-page.html")
 				span Content page
+			
+			a(href="projects.html")
+				span Инвестиционный климат
+				
 block variables
 	-var title = "Page";
