--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -125,6 +125,7 @@ input[type="submit"] {
 		width: calc(100% - 40px);
 	}
 }
+.offset-left,
 section{
 	padding-top: 100px;
 	padding-bottom: 100px;
@@ -143,6 +144,11 @@ section{
 		padding-bottom: 60px;
 		.h2{margin-bottom: 20px;}
 	}
+}
+.offset-left{
+	padding-top: 0;
+	padding-bottom: 0;
+	section{padding-left: 0;}
 }
 article{
 	padding-top: 30px; padding-bottom: 30px;
@@ -199,6 +205,7 @@ article{
 		margin-bottom: 20px;
 	}
 }
+.pt-0{padding-top: 0;}
 .btn-wrapper{
 	margin-top: 40px;
 	justify-content: space-between;
