--- a/src/scss/sections/_success-history.scss
+++ b/src/scss/sections/_success-history.scss
@@ -1,7 +1,19 @@
 .brand-card{
 	display: flex;
 	gap:10px;
-	.project-card{flex-shrink: 0;}
+	.project-card{
+		flex-shrink: 0; height: auto;
+		@media (max-width: 1599px) {
+			width: 320px;
+		}
+		@media (max-width: 1439px) {
+			width: 280px;
+			@media (max-width: 767px) {
+			  width: 100%;
+			  max-width: 100%;
+			}
+		}
+	}
 	 &__text{
 		border-radius: 20px;
 		border: 1px solid $sec2;
@@ -9,16 +21,26 @@
 		padding: 30px;
 		padding-bottom: 20px;
 	}
-		 &__text{
-			padding-left: 20px;
-			padding-right: 20px;
-			background-color: $sec4;
-			font-size: 14px;
-			line-height: 1.4;
-			color: $sec;
-			.title-24{
-				color: $pr;
-			}
-			&>*+*{margin-top: 10px;}
-		 }
+	&__text{
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color: $sec4;
+	font-size: 14px;
+	line-height: 1.4;
+	color: $sec;
+	.title-24{
+		color: $pr;
+	}
+	&>*+*{margin-top: 10px;}
+	}
+	@media (max-width: 767px) {
+	  flex-direction: column;
+	  &>*{width: 100%;}
+	}
+}
+.brand-card +.brand-card{
+	margin-top: 30px;
+	@media (max-width: 991px) {
+		margin-top: 20px;
+	}
 }
