--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -1,70 +1,98 @@
 section.projects.pt-0
-	#projects-tabs-toggle.tabs-toggle
+	.projects-menu
 		.container
-			ul.tabs-button
-				li.tabs-button__item.active(data-role="1") Истории успеха
-				li.tabs-button__item(data-role="2") Реализованные проекты
-				li.tabs-button__item(data-role="3") Проекты для инвестирования
-				li.tabs-button__item(data-role="4") Заявка на сопровождение инвестиционного проекта
-	#projects-content.tabs-content-wrapper
-		//====== вкладка История успеха =======
-		article.success-history.tabs-content.active(data-content="1")
-			.container
-				.h2 Истории успеха
-				.brand-cards-wrapper
-					//====card=====
-					.brand-card.fl-block
-						.project-card
-							.project-card__img
-								img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
-							.project-card__footer.fly-center
-								p ООО «А.РАЙМОНД РУС»(Франция)
-								a(href="#!").project-card__link
-									svg.svg-cam
-										use(href="./img/spriteSvg.svg#svg-cam")
+			ul
+				li.active(data-role="1")
+					a(href="#!") Истории успеха
+				li(data-role="2")
+					a(href="#!") Реализованные проекты
+				li(data-role="3")
+					a(href="#!") Проекты для инвестирования
+				li(data-role="4")
+					a(href="#!") Заявка на сопровождение инвестиционного проекта
 
-						.brand-card__text
-							.title-24 ООО «А.РАЙМОНД РУС»(Франция)
-							p Компания «А.Раймонд РУС» запустила свой завод в Нижегородской области в 2015 году на территории городского округа город Дзержинск. Производство было запущено в кратчайшие сроки при активном содействии региональных властей. 
-							p Основные сферы деятельности предприятия – производство и продажа крепежных изделий и специализированных компонентов из пластмассы преимущественно для автомобильной промышленности России. Сегодня крепежные элементы от Компания «А.Раймонд РУС» используются практически во всех автомобилях отечественной сборки.
-					//====card=====
-					.brand-card.fl-block
-						.project-card
-							.project-card__img
-								img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
-							.project-card__footer.fly-center
-								p РБПИ ГРУПП (Норвегия)
+	article.success-history(data-content="1")
+		.container
+			.h2 Истории успеха
+			.brand-cards-wrapper
+				//====card=====
+				.brand-card.fl-block
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «А.РАЙМОНД РУС»(Франция)
+							a(href="#!").project-card__link
+								svg.svg-cam
+									use(href="./img/spriteSvg.svg#svg-cam")
 
-						.brand-card__text
-							.title-24 РБПИ ГРУПП (Норвегия)
-							p В 2012 году РБПИ Групп основала свиноводческий комплекс ООО «ННПП» в Нижегородской области. В 2016 году компания приступила к реализации второго свиноводческого комплекса ООО «ННПП-2» в Большемурашкинском районе Нижегородской области.
-							p Сегодня РБПИ Групп в Нижегородской области – это 2 свиноводческих комплекса, 1 растениеводческое подразделение и 2 комбикормовых завода. Компания продолжает инвестиционную деятельность в области сельского хозяйства – в 2022 году планируется ввод в эксплуатацию двух свиноводческих комплексов в Сергачском и Ардатовском районах.
-							p РБПИ Групп входит в число крупнейших производителей свинины в России.
-					//====card=====
-					.brand-card.fl-block
-						.project-card
-							.project-card__img
-								img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
-							.project-card__footer.fly-center
-								p ООО «ХОМА АДГЕЗИВ»(Россия)
-								a(href="#!").project-card__link
-									svg.svg-cam
-										use(href="./img/spriteSvg.svg#svg-cam")
+					.brand-card__text
+						.title-24 ООО «А.РАЙМОНД РУС»(Франция)
+						p Компания «А.Раймонд РУС» запустила свой завод в Нижегородской области в 2015 году на территории городского округа город Дзержинск. Производство было запущено в кратчайшие сроки при активном содействии региональных властей. 
+						p Основные сферы деятельности предприятия – производство и продажа крепежных изделий и специализированных компонентов из пластмассы преимущественно для автомобильной промышленности России. Сегодня крепежные элементы от Компания «А.Раймонд РУС» используются практически во всех автомобилях отечественной сборки.
+				//====card=====
+				.brand-card.fl-block
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p РБПИ ГРУПП (Норвегия)
 
-						.brand-card__text
-							.title-24 ООО «ХОМА АДГЕЗИВ»(Россия)
-							p Компания «Хома» – российский разработчик и производитель полимерных дисперсий и клеевых систем. На рынке химической отрасли с 1998 года. Сегодня научную деятельность компании осуществляют 2 научных и 6 исследовательских центров, 4 специализированные лаборатории.
-							p Компания активно расширяет производственные мощности. С 2017 года запущен инвестиционный проект по расширению собственного производства в г. Дзержинске Нижегородской области. В 2020 году дочернее предприятие «Хома Адгезив» стало резидентом ОЭЗ «Кулибин», что обеспечило снижение налоговых ставок на прибыль, а также нулевые ставки по налогам на имущество, землю и транспортный налог. Статус «резидента» – это не только новые производственные возможности и инвестирование на выгодных условиях, но и установление кооперационных связей между резидентами ОЭЗ.
-							p В 2021 году компания «Хома Адгезив» запустила первый участок по производству полиуретановых клеевых систем, применяемых в строительной и автомобильной отраслях, в июне 2022 года состоялось открытие второго участка по производству водных клеевых материалов. Общий объем инвестиций в проект составляет около 318 млн рублей, предусмотрено создание 160 новых рабочих мест.
-		
-		
-		section.success-history2.tabs-content(data-content="2")
-			.container
-				p Мытищи, ул. Лётная, д.30 корпус 3444
-		section.success-history3.tabs-content(data-content="3")
-			.container
-				p Мытищи, ул. Лётная, д.30 корпус 355
-		section.success-history4.tabs-content(data-content="4")
-			.container
-				p Мытищи, ул. Лётная, д.30 корпус 3
+					.brand-card__text
+						.title-24 РБПИ ГРУПП (Норвегия)
+						p В 2012 году РБПИ Групп основала свиноводческий комплекс ООО «ННПП» в Нижегородской области. В 2016 году компания приступила к реализации второго свиноводческого комплекса ООО «ННПП-2» в Большемурашкинском районе Нижегородской области.
+						p Сегодня РБПИ Групп в Нижегородской области – это 2 свиноводческих комплекса, 1 растениеводческое подразделение и 2 комбикормовых завода. Компания продолжает инвестиционную деятельность в области сельского хозяйства – в 2022 году планируется ввод в эксплуатацию двух свиноводческих комплексов в Сергачском и Ардатовском районах.
+						p РБПИ Групп входит в число крупнейших производителей свинины в России.
+				//====card=====
+				.brand-card.fl-block
+					.project-card
+						.project-card__img
+							img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
+						.project-card__footer.fly-center
+							p ООО «ХОМА АДГЕЗИВ»(Россия)
+							a(href="#!").project-card__link
+								svg.svg-cam
+									use(href="./img/spriteSvg.svg#svg-cam")
+
+					.brand-card__text
+						.title-24 ООО «ХОМА АДГЕЗИВ»(Россия)
+						p Компания «Хома» – российский разработчик и производитель полимерных дисперсий и клеевых систем. На рынке химической отрасли с 1998 года. Сегодня научную деятельность компании осуществляют 2 научных и 6 исследовательских центров, 4 специализированные лаборатории.
+						p Компания активно расширяет производственные мощности. С 2017 года запущен инвестиционный проект по расширению собственного производства в г. Дзержинске Нижегородской области. В 2020 году дочернее предприятие «Хома Адгезив» стало резидентом ОЭЗ «Кулибин», что обеспечило снижение налоговых ставок на прибыль, а также нулевые ставки по налогам на имущество, землю и транспортный налог. Статус «резидента» – это не только новые производственные возможности и инвестирование на выгодных условиях, но и установление кооперационных связей между резидентами ОЭЗ.
+						p В 2021 году компания «Хома Адгезив» запустила первый участок по производству полиуретановых клеевых систем, применяемых в строительной и автомобильной отраслях, в июне 2022 года состоялось открытие второго участка по производству водных клеевых материалов. Общий объем инвестиций в проект составляет около 318 млн рублей, предусмотрено создание 160 новых рабочих мест.
+	
+	//===== Реализованные инвестиционные проекты ======
+	article.success-projects(data-content="2")
+		.container
+			.h2 Реализованные инвестиционные проекты на территории республики
+			.success-project.fl-block
+				.success-project__left
+					img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
+				.success-project__center
+					.h4 ООО «Ателье Гончарова»
+					p Строительство предприятия по производству музыкальных инструментов
+					ul
+						li
+							span Страна
+							p Россия
+						li
+							span Реализация:
+							p г.о.г.Нижний Новгород
+						li
+							span Отрасль:
+							p Промышленность
+				.success-project__right
+					.h4 Объем инвестиций:
+					
+					.h1 130
+						//===== это спан для моб версии
+						span млн рублей
+					//===== это спан для деск версии
+					span млн рублей
+	
+	section.success-history3.tabs-content(data-content="3")
+		.container
+			p Мытищи, ул. Лётная, д.30 корпус 355
+	section.success-history4.tabs-content(data-content="4")
+		.container
+			p Мытищи, ул. Лётная, д.30 корпус 3
 					
