--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-.h1, .h2, .h3,.title-24,  h1, h2, h3, h4, h5, h6{
+.h1, .h2, .h3,.h4,.title-24,  h1, h2, h3, h4, h5, h6{
 	font-family: $bold;
 	font-weight: 700;
 	color: $pr;
