--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,7 +30,7 @@
 @import "sections/_supervisory.scss";
 @import "sections/_custom-tabs.scss";
 @import "sections/_success-history.scss";
-// @import "sections/.scss";
+@import "sections/_success-project.scss";
 // @import "sections/.scss";
 // @import "sections/.scss";
 // @import "sections/.scss";
