--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -64,6 +64,8 @@ section.projects.pt-0
 	article.success-projects(data-content="2")
 		.container
 			.h2 Реализованные инвестиционные проекты на территории республики
+			
+			//===== single card ======
 			.success-project.fl-block
 				.success-project__left
 					img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
@@ -88,6 +90,62 @@ section.projects.pt-0
 						span млн рублей
 					//===== это спан для деск версии
 					span млн рублей
+
+			//===== single card ======
+			.success-project.fl-block
+				.success-project__left
+					img(src="./img/brend-logo7.webp", width="245" height="101" alt="logo")
+				.success-project__center
+					.h4 ООО «Тепличный комбинат Нижегородский»
+					p Строительство тепличного комплекса для круглогодичного выращивания овощной продукции
+					ul
+						li
+							span Страна
+							p Россия
+						li
+							span Реализация:
+							p г.о.г.Бор
+						li
+							span Отрасль:
+							p Сельское хозяйство
+				.success-project__right
+					.h4 Объем инвестиций:
+					
+					.h1 5 336
+						//===== это спан для моб версии
+						span млн рублей
+					//===== это спан для деск версии
+					span млн рублей
+
+			//===== single card ======
+			.success-project.fl-block
+				.success-project__left
+					img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
+				.success-project__center
+					.h4 ООО «Хома Адгезив»
+					p Создание производства клеевых материалов на основе сополимер-акриловых, поливинилацетатных и полиуретановых дисперсий
+					ul
+						li
+							span Страна
+							p Россия
+						li
+							span Реализация:
+							p г.о.г.Дзержинск
+						li
+							span Отрасль:
+							p Химическая промышленность
+				.success-project__right
+					.h4 Объем инвестиций:
+					
+					.h1 318
+						//===== это спан для моб версии
+						span млн рублей
+					//===== это спан для деск версии
+					span млн рублей
+	
+	
+	
+	
 	
 	section.success-history3.tabs-content(data-content="3")
 		.container
