--- a/src/pug/sections/_news-page-cards.pug
+++ b/src/pug/sections/_news-page-cards.pug
@@ -24,4 +24,4 @@ section.news-content
 				svg.svg-add
 					use(href="./img/spriteSvg.svg#svg-add")
 			
-			.news-counter 6 / 563
+			.cards-counter 6 / 563
