--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -143,9 +143,14 @@ section.projects.pt-0
 					//===== это спан для деск версии
 					span млн рублей
 	
-	
-	
-	
+			//===== блок с кнопкой ======
+			.btn-wrapper.fly-center
+				a(href="#!").btn-outline
+					span Загрузить еще проекты
+					svg.svg-add
+						use(href="../img/spriteSvg.svg#svg-add")
+
+				.cards-counter 6 / 563
 	
 	section.success-history3.tabs-content(data-content="3")
 		.container
