--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -116,7 +116,7 @@ html(lang="ru")
 									svg.svg-add
 										use(href="../img/spriteSvg.svg#svg-add")
 								
-								.news-counter 6 / 563
+								.cards-counter 6 / 563
 							pre.
 								.btn-wrapper.fly-center
 									a(href="#!").btn-outline
@@ -124,7 +124,7 @@ html(lang="ru")
 										svg.svg-add
 											use(href="./img/spriteSvg.svg#svg-add")
 									
-									.news-counter 6 / 563
+									.cards-counter 6 / 563
 
 						li
 							.team-slide.foto-card
