--- a/src/pug/sections/_main-menu.pug
+++ b/src/pug/sections/_main-menu.pug
@@ -57,7 +57,7 @@
 			.main-menu-footer
 				//==== search form =====
 				form(role="search" method="get" action="" ).search-form
-					.form-item
+					.form-item.form-item--search
 						input.form-input(type="text" placeholder="Найти...")
 						button(type="submit").flx-center
 							svg.svg-search
