--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -146,3 +146,17 @@ html(lang="ru")
 									
 									.foto-card__pic
 										img(src="./img/team.webp", width="339" height="448" alt="foto")
+						li
+							a(href="#!").download-card.fly-center
+								img(src="../img/icons/pdf.webp", width="62" height="62" alt="img")
+								p Пригородный район
+								span .pdf
+								svg.svg-downl
+									use(href="../img/spriteSvg.svg#svg-downl")
+							pre.
+								a(href="#!").download-card.fly-center
+									img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+									p Пригородный район
+									span .pdf
+									svg.svg-downl
+										use(href="./img/spriteSvg.svg#svg-downl")
