--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,7 +31,7 @@
 @import "sections/_custom-tabs.scss";
 @import "sections/_success-history.scss";
 @import "sections/_success-project.scss";
-// @import "sections/.scss";
+@import "sections/_invest-catalog.scss";
 // @import "sections/.scss";
 // @import "sections/.scss";
 @import "pages/_news.scss/";
