--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -152,9 +152,32 @@ section.projects.pt-0
 
 				.cards-counter 6 / 563
 	
-	section.success-history3.tabs-content(data-content="3")
+	article.invest-catalogy(data-content="3")
 		.container
-			p Мытищи, ул. Лётная, д.30 корпус 355
+			.h2 Каталог инвестиционных предложений
+			p В Каталоге инвестиционных предложений Нижегородской области представлены для инвесторов масштабные инфраструктурные проекты, требующие частного финансирования, проекты, предполагающие долевое участие инвестора в создании новых или модернизации действующих предприятий, а также готовые инвестиционные площадки по таким направлениям как промышленность, сельское хозяйство, туризм и др., а также сведения о льготных территориях, на которых возможно размещение различных объектов для нужд инвесторов, и контакты лиц, отвечающих за сопровождение проекта
+
+			a(href="#!").download-card.fly-center
+				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+				p Каталог инвестиционных предложений РСО-Алания
+				span .pdf
+				svg.svg-downl
+					use(href="./img/spriteSvg.svg#svg-downl")
+				
+				
+			.invest-catalogy__form
+				form(action="" method="method")
+					fieldset.form-fieldset
+						.form-item.form-item--search
+							input.form-input(type="text" placeholder="Найти...")
+							button(type="submit").flx-center
+								svg.svg-search
+									use(href="./img/spriteSvg.svg#svg-search")
+							a(href="#!").btn-outline
+								span Расширенный поиск
+								svg.svg-filter
+									use(href="../img/spriteSvg.svg#svg-filter")
+
 	section.success-history4.tabs-content(data-content="4")
 		.container
 			p Мытищи, ул. Лётная, д.30 корпус 3
