--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -214,13 +214,13 @@ input.valid, input:focus{border: 1px solid $sec1;}
     display: block;
   }
 }
-.search-form {
+.form-item.form-item--search {
   .form-input{padding-right: 50px;}
   .flx-center{
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 5px;
+    top: 18px;
     right: 0;
     transition: .5s;
     &:hover svg{
@@ -236,4 +236,9 @@ input.valid, input:focus{border: 1px solid $sec1;}
   top: 0;
   left: 0;
   z-index: -1;
+}
+.form-fieldset{
+  border-radius: 20px;
+    border: 1px solid $sec2;
+    background: $sec4;
 }
