--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -168,15 +168,18 @@ section.projects.pt-0
 			.invest-catalogy__form
 				form(action="" method="method")
 					fieldset.form-fieldset
-						.form-item.form-item--search
-							input.form-input(type="text" placeholder="Найти...")
-							button(type="submit").flx-center
-								svg.svg-search
-									use(href="./img/spriteSvg.svg#svg-search")
-							a(href="#!").btn-outline
+						.form-row
+							.form-item.form-item--search
+								input.form-input(type="text" placeholder="Найти...")
+								button(type="submit").flx-center
+									svg.svg-search
+										use(href="./img/spriteSvg.svg#svg-search")
+							button(type="button").btn-outline
 								span Расширенный поиск
 								svg.svg-filter
 									use(href="../img/spriteSvg.svg#svg-filter")
+					fieldset.form-fieldset
+						
 
 	section.success-history4.tabs-content(data-content="4")
 		.container
