--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -220,7 +220,9 @@ input.valid, input:focus{border: 1px solid $sec1;}
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 18px;
+    top: 5px;
+    display: flex;
+    align-items: center;
     right: 0;
     transition: .5s;
     &:hover svg{
@@ -241,4 +243,12 @@ input.valid, input:focus{border: 1px solid $sec1;}
   border-radius: 20px;
     border: 1px solid $sec2;
     background: $sec4;
+  padding: 30px;
+}
+.form-row{
+  display: flex;
+  align-items: center;
+  button{flex-shrink: 0;}
+  .form-item{flex-grow:1;}
+  gap:10px;
 }
