--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -42,6 +42,10 @@ input{
   background:white;
   padding-left: 16px;
   padding-right: 16px;
+  &::placeholder {
+      font-size: inherit;
+      color: $sec1;
+    }
  
 }
 .fake-placeholder + input{padding-top:17px;}
@@ -134,6 +138,10 @@ input.valid, input:focus{border: 1px solid $sec1;}
       top: 0;
       left: 0;
       opacity: 0;
+      &::placeholder{
+    font-size: inherit;
+    color: $sec1;
+  }
     }
   }
 }
@@ -220,7 +228,7 @@ input.valid, input:focus{border: 1px solid $sec1;}
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 5px;
+    top: 4px;
     display: flex;
     align-items: center;
     right: 0;
@@ -244,11 +252,132 @@ input.valid, input:focus{border: 1px solid $sec1;}
     border: 1px solid $sec2;
     background: $sec4;
   padding: 30px;
+  @media(max-width:1439px){
+    padding: 20px;
+    
+  }
+}
+.btn-clean{
+  @media (max-width: 991px) {
+    span{display: none;}
+  }
+}
+.form-buttons{
+  @media (max-width: 991px) {
+      .btn, button, .btn-outline, .btn-accent {
+        width: auto;
+        flex-grow: 1;
+      }
+    }
+}
+.form-fieldset+.form-fieldset{
+  margin-top: 20px;
+  @media (max-width: 767px) {
+  margin-top: 10px;
+  }
 }
 .form-row{
   display: flex;
-  align-items: center;
+  
   button{flex-shrink: 0;}
   .form-item{flex-grow:1;}
   gap:10px;
+}
+.form-row +.form-row{margin-top: 20px;}
+
+/*======================*/
+.mySelect {
+  position: relative;
+}
+
+.mySelect-drop {
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.mySelect input {
+  display: block;
+  width: 100%;
+  height: 54px;
+  cursor:pointer;
+  &::placeholder{
+    font-size: inherit;
+    color: $sec1;
+  }
+}
+.mySelect-input{
+  position: relative;
+  z-index: 2;
+  input{padding-right: 35px;}
+  
+}
+
+.mySelect-drop {
+  display: none;
+  max-height: 171px;
+  overflow: hidden;
+  overflow-y:auto;
+  scrollbar-width: thin;
+  scrollbar-color: $sec2 transparent;
+  border-radius: 0 0 12px 12px;
+  padding-top: 5px;
+  margin-top: -5px;
+  border: 1px solid $sec2;
+    background: white;
+    box-shadow: 0px 8px 12px 0px rgba(67, 94, 108, 0.06);
+  &::-webkit-scrollbar{
+    display: block;
+    width: 4px;
+    height: 20px;
+  }
+  &::-webkit-scrollbar-thumb{
+    width: 4px;
+   height: 20px;
+   background-color: $sec2;
+   border-radius: 4px;
+  }
+  &::-webkit-scrollbar-track{background-color:transparent;}
+  .mySelect-options{
+    border: none; 
+    border-radius: 0;
+    color: $sec1;
+    cursor:pointer;
+    &:hover{color: $pr1;}
+  }
+  @media (max-width: 991px) {
+    border-radius: 0 0 10px 10px ;
+  }
+}
+
+.mySelect-drop.active {
+  display: block;
+}
+
+.mySelect-icon {
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid $sec1;
+  border-right: 2px solid $sec1;
+  transform: rotate(135deg);
+  transition: .3s;
+  pointer-events: none;
+  position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 3;
+    cursor: pointer;
+}
+
+.mySelect-icon.active {
+  transform: rotate(-45deg);
+
+}
+.text-label{
+  font-size: 14px;
+  color: $pr;
+  margin-bottom: 5px;
+  line-height: 1.4;
+  display: block;
 }
