--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -124,6 +124,7 @@ input[type="submit"] {
 		width: calc(100% - 40px);
 	}
 }
+.projects-menu,
 .offset-left,
 section{
 	padding-top: 100px;
@@ -144,7 +145,7 @@ section{
 		.h2{margin-bottom: 20px;}
 	}
 }
-.offset-left{
+.offset-left,.projects-menu{
 	padding-top: 0;
 	padding-bottom: 0;
 	section{padding-left: 0;}
