--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -1,18 +1,18 @@
 .projects-page-content
 	.projects-menu
 		.container
-			ul
-				li.active(data-role="1")
-					a(href="#!") Истории успеха
-				li(data-role="2")
-					a(href="#!") Реализованные проекты
-				li(data-role="3")
-					a(href="#!") Проекты для инвестирования
-				li(data-role="4")
+			ul#sticky-menu
+				li.active
+					a(href="#success-history") Истории успеха
+				li
+					a(href="#success-projects") Реализованные проекты
+				li
+					a(href="#invest-catalogy") Проекты для инвестирования
+				li
 					a(href="#!") Заявка на сопровождение инвестиционного проекта
 
 	section.projects
-		article.success-history(data-content="1")
+		article.success-history#success-history
 			.container
 				.h2 Истории успеха
 				.brand-cards-wrapper
@@ -62,7 +62,7 @@
 							p В 2021 году компания «Хома Адгезив» запустила первый участок по производству полиуретановых клеевых систем, применяемых в строительной и автомобильной отраслях, в июне 2022 года состоялось открытие второго участка по производству водных клеевых материалов. Общий объем инвестиций в проект составляет около 318 млн рублей, предусмотрено создание 160 новых рабочих мест.
 		
 		//===== Реализованные инвестиционные проекты ======
-		article.success-projects(data-content="2")
+		article.success-projects#success-projects
 			.container
 				.h2 Реализованные инвестиционные проекты на территории республики
 				
@@ -153,7 +153,7 @@
 
 					.cards-counter 6 / 563
 		
-		article.invest-catalogy(data-content="3")
+		article.invest-catalogy#invest-catalogy
 			.container
 				.h2 Каталог инвестиционных предложений
 				p.body-3 В Каталоге инвестиционных предложений Нижегородской области представлены для инвесторов масштабные инфраструктурные проекты, требующие частного финансирования, проекты, предполагающие долевое участие инвестора в создании новых или модернизации действующих предприятий, а также готовые инвестиционные площадки по таким направлениям как промышленность, сельское хозяйство, туризм и др., а также сведения о льготных территориях, на которых возможно размещение различных объектов для нужд инвесторов, и контакты лиц, отвечающих за сопровождение проекта
