--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -124,8 +124,16 @@ input[type="submit"] {
 		width: calc(100% - 40px);
 	}
 }
-.projects-menu,
-.offset-left,
+.projects-menu{
+	padding-left: 449px;
+	@media(max-width:1919px) {
+		padding-left: 300px;
+	}
+	@media (max-width: 1199px) {
+		padding-left: 0;
+
+	}
+}
 section{
 	padding-top: 100px;
 	padding-bottom: 100px;
@@ -145,11 +153,7 @@ section{
 		.h2{margin-bottom: 20px;}
 	}
 }
-.offset-left,.projects-menu{
-	padding-top: 0;
-	padding-bottom: 0;
-	section{padding-left: 0;}
-}
+
 article{
 	padding-top: 30px; padding-bottom: 30px;
 	.h2, .h3, h2, h3{
