--- a/src/scss/sections/_success-history.scss
+++ b/src/scss/sections/_success-history.scss
@@ -1,3 +1,15 @@
+.projects{
+	article{
+		padding-top: 140px;
+		margin-top: -125px;
+		@media (max-width: 899px) {
+			padding-top: 135px;
+			margin-top: -120px;
+		
+		}
+	}
+}
+
 .brand-card{
 	display: flex;
 	gap:10px;
