--- a/src/scss/sections/_success-history.scss
+++ b/src/scss/sections/_success-history.scss
@@ -2,9 +2,13 @@
 	article{
 		padding-top: 140px;
 		margin-top: -125px;
+		.container>*+*{margin-top: 40px;}
 		@media (max-width: 899px) {
 			padding-top: 135px;
 			margin-top: -120px;
+			.container>*+* {
+					margin-top: 20px;
+				}
 		
 		}
 	}
