--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -228,7 +228,7 @@
 											use(href="../img/spriteSvg.svg#svg-reload")
 
 				//=== cards block====
-				.double-block
+				.invest-catalogy__cards
 					//====card=====
 					.foto-card
 						a(href="#!").foto-card__text.fl-column
