--- a/src/scss/sections/_invest-catalog.scss
+++ b/src/scss/sections/_invest-catalog.scss
@@ -18,7 +18,7 @@
 		@media (max-width: 767px) {
 		flex-direction: column;
 		align-items: center;
-		
+
 		}
 	}
 	.form-buttons{
@@ -38,5 +38,30 @@
 	display: none;
 	&.open{
 		display: block;
+	}
+}
+.invest-catalogy__cards{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap:30px;
+	.foto-card{
+		grid-template-columns: 1fr 325px;
+		@media(max-width:1919px){
+			grid-template-columns: 1fr 280px;
+			.foto-card__pic{
+				width: 100%;
+			}
+		}
+	}
+	@media (max-width: 1439px) {
+		grid-template-columns: 1fr;
+		.foto-card {
+				grid-template-columns: 1fr 325px;
+			}
+	}
+	@media (max-width: 699px) {
+		.foto-card .foto-card__text{
+				width: 100%;
+			} 
 	}
 }
