--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -1,9 +1,9 @@
 .projects-page-content
-	.projects-menu
+	.sticky-menu
 		.container
 			ul#sticky-menu
-				li.active
-					a(href="#success-history") Истории успеха
+				li
+					a(href="#success-history").active Истории успеха
 				li
 					a(href="#success-projects") Реализованные проекты
 				li
@@ -12,7 +12,7 @@
 					a(href="#aplication") Заявка на сопровождение инвестиционного проекта
 
 	section.projects
-		article.success-history#success-history
+		article.success-history.sticky-menu-section#success-history
 			.container
 				.h2 Истории успеха
 				.brand-cards-wrapper
@@ -62,7 +62,7 @@
 							p В 2021 году компания «Хома Адгезив» запустила первый участок по производству полиуретановых клеевых систем, применяемых в строительной и автомобильной отраслях, в июне 2022 года состоялось открытие второго участка по производству водных клеевых материалов. Общий объем инвестиций в проект составляет около 318 млн рублей, предусмотрено создание 160 новых рабочих мест.
 		
 		//===== Реализованные инвестиционные проекты ======
-		article.success-projects#success-projects
+		article.success-projects.sticky-menu-section#success-projects
 			.container
 				.h2 Реализованные инвестиционные проекты на территории республики
 				
@@ -153,10 +153,10 @@
 
 					.cards-counter 3 / 97
 		
-		article.invest-catalogy#invest-catalogy
+		article.invest-catalogy.sticky-menu-section#invest-catalogy
 			.container
 				.h2 Каталог инвестиционных предложений
-				p.body-3 В Каталоге инвестиционных предложений Нижегородской области представлены для инвесторов масштабные инфраструктурные проекты, требующие частного финансирования, проекты, предполагающие долевое участие инвестора в создании новых или модернизации действующих предприятий, а также готовые инвестиционные площадки по таким направлениям как промышленность, сельское хозяйство, туризм и др., а также сведения о льготных территориях, на которых возможно размещение различных объектов для нужд инвесторов, и контакты лиц, отвечающих за сопровождение проекта
+				p.body-reg В Каталоге инвестиционных предложений Нижегородской области представлены для инвесторов масштабные инфраструктурные проекты, требующие частного финансирования, проекты, предполагающие долевое участие инвестора в создании новых или модернизации действующих предприятий, а также готовые инвестиционные площадки по таким направлениям как промышленность, сельское хозяйство, туризм и др., а также сведения о льготных территориях, на которых возможно размещение различных объектов для нужд инвесторов, и контакты лиц, отвечающих за сопровождение проекта
 
 				a(href="#!").download-card.fly-center
 					img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
@@ -283,7 +283,7 @@
 					.cards-counter 4 / 12
 		
 		
-		article.application#aplication
+		article.application.sticky-menu-section#aplication
 			.container
 				.h2 Заявка на сопровождение инвестиционного проекта
 				p Если Вы начинаете реализацию инвестиционного проекта на территории Нижегородской области, Вы можете подать заявку на сопровождение инвестиционного проекта в соответствии с Регламентом сопровождения инвестпроектов, отслеживать статус поданной заявки и получить обратную связь от органов власти по результатам ее обработки.
