--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -124,7 +124,7 @@ input[type="submit"] {
 		width: calc(100% - 40px);
 	}
 }
-.projects-menu{
+.sticky-menu{
 	padding-left: 449px;
 	@media(max-width:1919px) {
 		padding-left: 300px;
